# windowactuators

./: .gitignore  CMakeLists.txt  Honaunau_Windows_Control_Base.aia  README  README.md  esp32windowinterface.ino  espconfig.h  platformio.ini  windowcontrols.ino
include/: ActuatorReporter.h  MegaActuatorController.h  MegaButton.h  MegaCommand.h  MegaInputManager.h  MegaRelayControl.h  MegaStateWatcher.h  espconfig.README  espconfigTEMPLATE.h  inputmapping.h  megatypes.h
include/esp32/: ActuatorCommandExecutor.h  BodyBuilder.cpp  BodyBuilder.h  FooterBuilder.cpp  FooterBuilder.h  HeaderBuilder.cpp  HeaderBuilder.h  NavigationBuilder.cpp  NavigationBuilder.h  StatusController.h  StatusMonitor.cpp  StatusMonitor.h  StatusReportFormatter.h  StatusReportProcessor.h  WebController.h  WebPageBuilder.cpp  WebPageBuilder.h  WebServerManager.h  esp32Config.h
include/mega/: ActuatorReporter.h  Debounced.h  MegaActuatorController.h  MegaCommand.h  MegaInputManager.h  MegaLEDControl.h  MegaRelayControl.h  MegaStateWatcher.h  MegaSwitch.h  inputmapping.h
src/: esp32_main.cpp  mega2560_main.cpp
src/esp32/: BodyBuilder.cpp  FooterBuilder.cpp  HeaderBuilder.cpp  NavigationBuilder.cpp  StatusController.cpp  StatusMonitor.cpp  StatusReportFormatter.cpp  StatusReportProcessor.cpp  WebPageBuilder.cpp  WebServerManager.cpp
